[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/widgets/slider.gd" type="Script" id=1]
[ext_resource path="res://ui/instrument_designer/fm/lfo_panel.gd" type="Script" id=2]
[ext_resource path="res://ui/instrument_designer/wave_menu.gd" type="Script" id=3]

[node name="LFOPanel" type="PanelContainer"]
margin_right = 1024.0
margin_bottom = 71.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 65.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="VBC"]
margin_right = 1010.0
margin_bottom = 14.0
text = "LFO X"

[node name="HBC" type="HBoxContainer" parent="VBC"]
margin_top = 18.0
margin_right = 1010.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="DUCLabel" type="Label" parent="VBC/HBC"]
margin_top = 3.0
margin_right = 28.0
margin_bottom = 17.0
text = "DUC"

[node name="DUCSlider" type="HSlider" parent="VBC/HBC"]
margin_left = 32.0
margin_top = 2.0
margin_right = 479.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 255.0
script = ExtResource( 1 )
label = NodePath("../DUCValue")

[node name="DUCValue" type="Label" parent="VBC/HBC"]
margin_left = 483.0
margin_top = 3.0
margin_right = 507.0
margin_bottom = 17.0
text = "888"

[node name="ReferenceRect" type="ReferenceRect" parent="VBC/HBC"]
margin_left = 511.0
margin_right = 527.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 0 )

[node name="WAVLabel" type="Label" parent="VBC/HBC"]
margin_left = 531.0
margin_top = 3.0
margin_right = 559.0
margin_bottom = 17.0
text = "DUC"

[node name="WAVButton" type="OptionButton" parent="VBC/HBC"]
margin_left = 563.0
margin_right = 1010.0
margin_bottom = 20.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="HBC2" type="HBoxContainer" parent="VBC"]
margin_top = 42.0
margin_right = 1010.0
margin_bottom = 58.0
size_flags_horizontal = 3

[node name="FRQLabel" type="Label" parent="VBC/HBC2"]
margin_top = 1.0
margin_right = 26.0
margin_bottom = 15.0
text = "FRQ"

[node name="FRQSlider" type="HSlider" parent="VBC/HBC2"]
margin_left = 30.0
margin_right = 954.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.004
script = ExtResource( 1 )
label = NodePath("../FRQValue")
mask = "%7.3f"

[node name="FRQValue" type="Label" parent="VBC/HBC2"]
margin_left = 958.0
margin_top = 1.0
margin_right = 1010.0
margin_bottom = 15.0
text = "888.888"
[connection signal="value_changed" from="VBC/HBC/DUCSlider" to="." method="_on_DUCSlider_value_changed"]
[connection signal="item_selected" from="VBC/HBC/WAVButton" to="." method="_on_WAVButton_item_selected"]
[connection signal="value_changed" from="VBC/HBC2/FRQSlider" to="." method="_on_FRQSlider_value_changed"]
